--- a/index.html
+++ b/index.html
@@ -54,17 +54,32 @@
       <div class="ghost-div"></div>
      </div>
 
-     <div class="main-content__card">
-      <img
-       src="src/img/Nafi.svg"
-       alt="Name of the author"
-       class="main-content__card-name"
-      />
-      <img
-       src="src/img/v1.svg"
-       alt="version logo"
-       class="main-content__card-version"
-      />
+     <div class="main-content__card-container__cards">
+      <div class="main-content__card-sideA">
+       <img
+        src="src/img/Nafi.svg"
+        alt="Name of the author"
+        class="main-content__card-sideA-name"
+       />
+       <img
+        src="src/img/v1.svg"
+        alt="version logo"
+        class="main-content__card-sideA-version"
+       />
+      </div>
+      <div class="main-content__card-sideB">
+       <article class="main-content__card-sideB__header-container">
+        <h1 class="main-content__card-sideB-heading">About Me</h1>
+       </article>
+
+       <article class="main-content__card-sideB__text-container">
+        <p class="main-content__card-sideB__text-container__text">
+         Hello,<br />
+         I am Nafiur Rahman.I am a html email and front-end developer. I work
+         with various front-end technologies and learning from hereafter.
+        </p>
+       </article>
+      </div>
      </div>
 
      <div class="main-content__screen-project"></div>
