--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" href="src/sass/main.scss" />
   <title>Nafiur Rahman Siddiqui Portfolio</title>
  </head>
- <body>
+ <body class="body card-active">
   <div class="container">
    <header class="header">
     <div class="header__logo-container">
@@ -82,8 +82,14 @@
       </div>
      </div>
 
-     <div class="main-content__screen-project"></div>
-     <div class="main-content__screen-contact"></div>
+     <div class="main-content__screen project" id="promo-screen">
+      <span class="main-content__screenProject-card">
+       <!-- <img src="src/img/" alt="" /> -->
+      </span>
+     </div>
+     <div class="main-content__screen project" id="transactional-screen"></div>
+     <div class="main-content__screen project" id="newsletter-screen"></div>
+     <div class="main-content__screen contact" id="landingPage-screen"></div>
     </article>
    </section>
 
