--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
    <section class="main-content">
     <aside class="main-content__btn-container">
      <button class="project-btn" id="promo">Promo Mail</button>
-     <button class="project-btn" id="transactional">Transactional Mail</button>
+     <button class="project-btn" id="transactional">Transactional</button>
      <button class="project-btn" id="newsletter">Newsletter</button>
      <button class="project-btn" id="landingPage">Landing Page</button>
     </aside>
@@ -247,6 +247,59 @@
       </aside>
      </div>
     </article>
+
+    <!-- smaller device tray -->
+    <aside class="main-content__btn-container-tray">
+     <div class="main-content__btn-container-tray__header-container">
+      <h1 class="main-content__btn-container-tray__header-projects">
+       Projects
+      </h1>
+
+      <span class="main-content__btn-container-tray__top-notch"></span>
+
+      <h1 class="main-content__btn-container-tray__header-social">
+       Social Media
+      </h1>
+     </div>
+     <article class="main-content__btn-container-tray__container">
+      <button class="project-btn__tray" id="promo">Promo Mail</button>
+      <button class="project-btn__tray" id="transactional">
+       Transactional
+      </button>
+      <button class="project-btn__tray" id="newsletter">Newsletter</button>
+      <button class="project-btn__tray" id="landingPage">Landing Page</button>
+     </article>
+
+     <aside class="social-media-tray">
+      <a
+       href="https://www.facebook.com/jim.rahman.3726/"
+       target="_blank"
+       rel="noopener noreferrer"
+      >
+       <img src="src/img/facebook.svg" alt="facebook icon" />
+      </a>
+
+      <a href="http://" target="_blank" rel="noopener noreferrer">
+       <img src="src/img/twitter.svg" alt="twitter icon" />
+      </a>
+
+      <a
+       href="https://www.instagram.com/codeonjim.js/"
+       target="_blank"
+       rel="noopener noreferrer"
+      >
+       <img src="src/img/instagram.svg" alt="instagram icon" />
+      </a>
+
+      <a
+       href="https://github.com/TheHunter808"
+       target="_blank"
+       rel="noopener noreferrer"
+      >
+       <img src="src/img/github.svg" alt="instagram icon" />
+      </a>
+     </aside>
+    </aside>
    </section>
 
    <aside class="social-media">
