--- a/index.html
+++ b/index.html
@@ -85,42 +85,47 @@
      <!-- project screen -->
      <div class="main-content__screen project" id="promo-screen">
       <h1 class="main-content__screenproject-header">Promotional mail</h1>
-      <div class="project-card__container">
-       <span class="main-content__screenProject-card codeschool"> </span>
-       <span class="main-content__screenProject-card-layer">
-        <div class="preview-icon__container">
-         <img
-          src="src/img/eye_closed.svg"
-          alt="closed eye icon"
-          title="preview"
-         />
-         <img src="src/img/code.svg" alt="code icon" title="Source code" />
-        </div>
-       </span>
-      </div>
-      <div class="project-card__container">
-       <span class="main-content__screenProject-card meal"> </span>
-       <span class="main-content__screenProject-card-layer">
-        <div class="preview-icon__container">
-         <img
-          src="src/img/eye_closed.svg"
-          alt="closed eye icon"
-          title="preview"
-         />
-         <img
-          src="src/img/PlayBtn.svg"
-          alt="closed eye icon"
-          title="Wanna see a vdo of this project?"
-         />
-         <img src="src/img/code.svg" alt="code icon" title="Source code" />
-        </div>
-       </span>
+
+      <div class="main-content__screenproject-card__wrapper">
+       <div class="project-card__container">
+        <span class="main-content__screenProject-card codeschool"> </span>
+        <span class="main-content__screenProject-card-layer">
+         <div class="preview-icon__container">
+          <img
+           src="src/img/eye_closed.svg"
+           alt="closed eye icon"
+           title="preview"
+          />
+          <img src="src/img/code.svg" alt="code icon" title="Source code" />
+         </div>
+        </span>
+       </div>
+       <div class="project-card__container">
+        <span class="main-content__screenProject-card meal"> </span>
+        <span class="main-content__screenProject-card-layer">
+         <div class="preview-icon__container">
+          <img
+           src="src/img/eye_closed.svg"
+           alt="closed eye icon"
+           title="preview"
+          />
+          <img
+           src="src/img/PlayBtn.svg"
+           alt="closed eye icon"
+           title="Wanna see a vdo of this project?"
+          />
+          <img src="src/img/code.svg" alt="code icon" title="Source code" />
+         </div>
+        </span>
+       </div>
       </div>
      </div>
 
      <div class="main-content__screen project" id="transactional-screen">
-      <h1 class="main-content__screenproject-header">Transactional mail</h1>
-      <div class="project-card__container">
+      <h1 class="main-content__screenproject-header transactional">
+       Transactional mail
+      </h1>
+      <div class="project-card__container transactional">
        <span class="main-content__screenProject-card transactional"> </span>
        <span class="main-content__screenProject-card-layer">
         <div class="preview-icon__container">
@@ -137,7 +142,8 @@
 
      <div class="main-content__screen project" id="newsletter-screen">
       <h1 class="main-content__screenproject-header">Newsletter mail</h1>
-      <div class="project-card__container">
+
+      <div class="project-card__container newsletter">
        <span class="main-content__screenProject-card newsletter"> </span>
        <span class="main-content__screenProject-card-layer">
         <div class="preview-icon__container">
@@ -159,42 +165,45 @@
 
      <div class="main-content__screen project" id="landingPage-screen">
       <h1 class="main-content__screenproject-header">Landing Page</h1>
-      <div class="project-card__container">
-       <span class="main-content__screenProject-card qpick"> </span>
-       <span class="main-content__screenProject-card-layer">
-        <div class="preview-icon__container">
-         <img
-          src="src/img/eye_closed.svg"
-          alt="closed eye icon"
-          title="preview"
-         />
-         <img
-          src="src/img/PlayBtn.svg"
-          alt="closed eye icon"
-          title="Wanna see a vdo of this project?"
-         />
-         <img src="src/img/code.svg" alt="code icon" title="Source code" />
-        </div>
-       </span>
-      </div>
 
-      <div class="project-card__container">
-       <span class="main-content__screenProject-card cyberpunk"> </span>
-       <span class="main-content__screenProject-card-layer">
-        <div class="preview-icon__container">
-         <img
-          src="src/img/eye_closed.svg"
-          alt="closed eye icon"
-          title="preview"
-         />
-         <img
-          src="src/img/PlayBtn.svg"
-          alt="closed eye icon"
-          title="Wanna see a vdo of this project?"
-         />
-         <img src="src/img/code.svg" alt="code icon" title="Source code" />
-        </div>
-       </span>
+      <div class="main-content__screenproject-card__wrapper">
+       <div class="project-card__container">
+        <span class="main-content__screenProject-card qpick"> </span>
+        <span class="main-content__screenProject-card-layer">
+         <div class="preview-icon__container">
+          <img
+           src="src/img/eye_closed.svg"
+           alt="closed eye icon"
+           title="preview"
+          />
+          <img
+           src="src/img/PlayBtn.svg"
+           alt="closed eye icon"
+           title="Wanna see a vdo of this project?"
+          />
+          <img src="src/img/code.svg" alt="code icon" title="Source code" />
+         </div>
+        </span>
+       </div>
+
+       <div class="project-card__container">
+        <span class="main-content__screenProject-card cyberpunk"> </span>
+        <span class="main-content__screenProject-card-layer">
+         <div class="preview-icon__container">
+          <img
+           src="src/img/eye_closed.svg"
+           alt="closed eye icon"
+           title="preview"
+          />
+          <img
+           src="src/img/PlayBtn.svg"
+           alt="closed eye icon"
+           title="Wanna see a vdo of this project?"
+          />
+          <img src="src/img/code.svg" alt="code icon" title="Source code" />
+         </div>
+        </span>
+       </div>
       </div>
      </div>
 
