--- a/index.html
+++ b/index.html
@@ -83,92 +83,52 @@
      </div>
 
      <!-- project screen -->
-     <div class="main-content__screen project" id="promo-screen">
-      <h1 class="main-content__screenproject-header">Promotional mail</h1>
 
-      <div class="main-content__screenproject-card__wrapper">
-       <div class="project-card__container">
-        <span class="main-content__screenProject-card codeschool"> </span>
-        <span class="main-content__screenProject-card-layer">
-         <div class="preview-icon__container">
-          <img
-           src="src/img/eye_closed.svg"
-           alt="closed eye icon"
-           title="preview"
-          />
-          <img src="src/img/code.svg" alt="code icon" title="Source code" />
-         </div>
-        </span>
-       </div>
-       <div class="project-card__container">
-        <span class="main-content__screenProject-card meal"> </span>
-        <span class="main-content__screenProject-card-layer">
-         <div class="preview-icon__container">
-          <img
-           src="src/img/eye_closed.svg"
-           alt="closed eye icon"
-           title="preview"
-          />
-          <img
-           src="src/img/PlayBtn.svg"
-           alt="closed eye icon"
-           title="Wanna see a vdo of this project?"
-          />
-          <img src="src/img/code.svg" alt="code icon" title="Source code" />
-         </div>
-        </span>
-       </div>
-      </div>
-     </div>
+     <section class="main-content__screen-container">
+      <div class="main-content__screen project" id="promo-screen">
+       <h1 class="main-content__screenproject-header">Promotional mail</h1>
 
-     <div class="main-content__screen project" id="transactional-screen">
-      <h1 class="main-content__screenproject-header transactional">
-       Transactional mail
-      </h1>
-      <div class="project-card__container transactional">
-       <span class="main-content__screenProject-card transactional"> </span>
-       <span class="main-content__screenProject-card-layer">
-        <div class="preview-icon__container">
-         <img
-          src="src/img/eye_closed.svg"
-          alt="closed eye icon"
-          title="preview"
-         />
-         <img src="src/img/code.svg" alt="code icon" title="Source code" />
+       <div class="main-content__screenproject-card__wrapper">
+        <div class="project-card__container">
+         <span class="main-content__screenProject-card codeschool"> </span>
+         <span class="main-content__screenProject-card-layer">
+          <div class="preview-icon__container">
+           <img
+            src="src/img/eye_closed.svg"
+            alt="closed eye icon"
+            title="preview"
+           />
+           <img src="src/img/code.svg" alt="code icon" title="Source code" />
+          </div>
+         </span>
         </div>
-       </span>
-      </div>
-     </div>
-
-     <div class="main-content__screen project" id="newsletter-screen">
-      <h1 class="main-content__screenproject-header">Newsletter mail</h1>
-
-      <div class="project-card__container newsletter">
-       <span class="main-content__screenProject-card newsletter"> </span>
-       <span class="main-content__screenProject-card-layer">
-        <div class="preview-icon__container">
-         <img
-          src="src/img/eye_closed.svg"
-          alt="closed eye icon"
-          title="preview"
-         />
-         <img
-          src="src/img/PlayBtn.svg"
-          alt="closed eye icon"
-          title="Wanna see a vdo of this project?"
-         />
-         <img src="src/img/code.svg" alt="code icon" title="Source code" />
+        <div class="project-card__container">
+         <span class="main-content__screenProject-card meal"> </span>
+         <span class="main-content__screenProject-card-layer">
+          <div class="preview-icon__container">
+           <img
+            src="src/img/eye_closed.svg"
+            alt="closed eye icon"
+            title="preview"
+           />
+           <img
+            src="src/img/PlayBtn.svg"
+            alt="closed eye icon"
+            title="Wanna see a vdo of this project?"
+           />
+           <img src="src/img/code.svg" alt="code icon" title="Source code" />
+          </div>
+         </span>
         </div>
-       </span>
+       </div>
       </div>
-     </div>
 
-     <div class="main-content__screen project" id="landingPage-screen">
-      <h1 class="main-content__screenproject-header">Landing Page</h1>
-
-      <div class="main-content__screenproject-card__wrapper">
-       <div class="project-card__container">
-        <span class="main-content__screenProject-card qpick"> </span>
+      <div class="main-content__screen project" id="transactional-screen">
+       <h1 class="main-content__screenproject-header transactional">
+        Transactional mail
+       </h1>
+       <div class="project-card__container transactional">
+        <span class="main-content__screenProject-card transactional"> </span>
         <span class="main-content__screenProject-card-layer">
          <div class="preview-icon__container">
           <img
@@ -176,18 +136,17 @@
            alt="closed eye icon"
            title="preview"
           />
-          <img
-           src="src/img/PlayBtn.svg"
-           alt="closed eye icon"
-           title="Wanna see a vdo of this project?"
-          />
           <img src="src/img/code.svg" alt="code icon" title="Source code" />
          </div>
         </span>
        </div>
+      </div>
 
-       <div class="project-card__container">
-        <span class="main-content__screenProject-card cyberpunk"> </span>
+      <div class="main-content__screen project" id="newsletter-screen">
+       <h1 class="main-content__screenproject-header">Newsletter mail</h1>
+
+       <div class="project-card__container newsletter">
+        <span class="main-content__screenProject-card newsletter"> </span>
         <span class="main-content__screenProject-card-layer">
          <div class="preview-icon__container">
           <img
@@ -205,56 +164,100 @@
         </span>
        </div>
       </div>
-     </div>
 
-     <div class="main-content__screen project" id="contact">
-      <div class="contact__mail-container">
-       <p class="contact-screen-text">
-        <span class="contact-screen-text__email"> Email : </span>
-        progatron100@gmail.com
+      <div class="main-content__screen project" id="landingPage-screen">
+       <h1 class="main-content__screenproject-header">Landing Page</h1>
+
+       <div class="main-content__screenproject-card__wrapper">
+        <div class="project-card__container">
+         <span class="main-content__screenProject-card qpick"> </span>
+         <span class="main-content__screenProject-card-layer">
+          <div class="preview-icon__container">
+           <img
+            src="src/img/eye_closed.svg"
+            alt="closed eye icon"
+            title="preview"
+           />
+           <img
+            src="src/img/PlayBtn.svg"
+            alt="closed eye icon"
+            title="Wanna see a vdo of this project?"
+           />
+           <img src="src/img/code.svg" alt="code icon" title="Source code" />
+          </div>
+         </span>
+        </div>
+
+        <div class="project-card__container">
+         <span class="main-content__screenProject-card cyberpunk"> </span>
+         <span class="main-content__screenProject-card-layer">
+          <div class="preview-icon__container">
+           <img
+            src="src/img/eye_closed.svg"
+            alt="closed eye icon"
+            title="preview"
+           />
+           <img
+            src="src/img/PlayBtn.svg"
+            alt="closed eye icon"
+            title="Wanna see a vdo of this project?"
+           />
+           <img src="src/img/code.svg" alt="code icon" title="Source code" />
+          </div>
+         </span>
+        </div>
+       </div>
+      </div>
+
+      <div class="main-content__screen project" id="contact">
+       <div class="contact__mail-container">
+        <p class="contact-screen-text">
+         <span class="contact-screen-text__email"> Email : </span>
+         progatron100@gmail.com
+        </p>
+
+        <a href="mailto:progatron100@gmail.com">
+         <button class="contact-screen__mail-btn">
+          <img src="src/img/sendMail.png" alt="send mail icon" />
+         </button>
+        </a>
+       </div>
+       <p class="contact-screen-text bottom">
+        <span class="contact-screen-text__or">or </span>
+        Feel free to DM me in any of the listed platfroms below.
        </p>
 
-       <a href="mailto:progatron100@gmail.com">
-        <button class="contact-screen__mail-btn">
-         <img src="src/img/sendMail.png" alt="send mail icon" />
-        </button>
-       </a>
+       <aside class="social-media-contact">
+        <a
+         href="https://www.facebook.com/jim.rahman.3726/"
+         target="_blank"
+         rel="noopener noreferrer"
+        >
+         <img src="src/img/facebook.svg" alt="facebook icon" />
+        </a>
+
+        <a href="http://" target="_blank" rel="noopener noreferrer">
+         <img src="src/img/twitter.svg" alt="twitter icon" />
+        </a>
+
+        <a
+         href="https://www.instagram.com/codeonjim.js/"
+         target="_blank"
+         rel="noopener noreferrer"
+        >
+         <img src="src/img/instagram.svg" alt="instagram icon" />
+        </a>
+
+        <a
+         href="https://github.com/TheHunter808"
+         target="_blank"
+         rel="noopener noreferrer"
+        >
+         <img src="src/img/github.svg" alt="instagram icon" />
+        </a>
+       </aside>
       </div>
-      <p class="contact-screen-text bottom">
-       <span class="contact-screen-text__or">or </span>
-       Feel free to DM me in any of the listed platfroms below.
-      </p>
-
-      <aside class="social-media-contact">
-       <a
-        href="https://www.facebook.com/jim.rahman.3726/"
-        target="_blank"
-        rel="noopener noreferrer"
-       >
-        <img src="src/img/facebook.svg" alt="facebook icon" />
-       </a>
-
-       <a href="http://" target="_blank" rel="noopener noreferrer">
-        <img src="src/img/twitter.svg" alt="twitter icon" />
-       </a>
-
-       <a
-        href="https://www.instagram.com/codeonjim.js/"
-        target="_blank"
-        rel="noopener noreferrer"
-       >
-        <img src="src/img/instagram.svg" alt="instagram icon" />
-       </a>
-
-       <a
-        href="https://github.com/TheHunter808"
-        target="_blank"
-        rel="noopener noreferrer"
-       >
-        <img src="src/img/github.svg" alt="instagram icon" />
-       </a>
-      </aside>
-     </div>
+     </section>
     </article>
 
     <!-- smaller device tray -->
