--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
   <meta name="twitter:creator" content="@CodeOnLoop" />
   <link rel="shortcut icon" href="src/img/logo_face.png" type="image/x-icon" />
   <link rel="stylesheet" href="src/sass/main.scss" />
+
+  <script defer src="./src/js/nameCard.js"></script>
   <title>Nafiur Rahman Siddiqui Portfolio</title>
  </head>
- <body class="body card-active">
+ <body class="body">
   <div class="container">
    <header class="header">
     <div class="header__logo-container">
@@ -260,6 +262,33 @@
      </section>
     </article>
 
+    <!-- svg for mobile device -->
+    <div class="svg-arrow__container" id="arrow-container">
+     <img
+      src="src/img/svg_icon/arrow_first.svg"
+      alt="arrow icon dark"
+      class="svg-arrow__first"
+      style="--order: 1"
+     />
+     <img
+      src="src/img/svg_icon/arrow_second.svg"
+      alt="arrow icon dark"
+      class="svg-arrow__second"
+      style="--order: 2"
+     />
+     <img
+      src="src/img/svg_icon/arrow_third.svg"
+      alt="arrow icon dark"
+      class="svg-arrow__third"
+      style="--order: 3"
+     />
+     <img
+      src="src/img/svg_icon/arrow_fourth.svg"
+      alt="arrow icon dark"
+      class="svg-arrow__fourth"
+      style="--order: 4"
+     />
+    </div>
     <!-- smaller device tray -->
     <aside class="main-content__btn-container-tray">
      <div class="main-content__btn-container-tray__header-container">
@@ -269,9 +298,9 @@
 
       <span class="main-content__btn-container-tray__top-notch"></span>
 
-      <h1 class="main-content__btn-container-tray__header-social">
+      <!-- <h1 class="main-content__btn-container-tray__header-social">
        Social Media
-      </h1>
+      </h1> -->
      </div>
      <article class="main-content__btn-container-tray__container">
       <button class="project-btn__tray" id="promo">Promo Mail</button>
