project screen__onProgress

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
           </div>
          </span>
         </div>
+
         <div class="project-card__container">
          <span class="main-content__screenProject-card meal"> </span>
          <span class="main-content__screenProject-card-layer">
@@ -142,6 +143,7 @@
            src="src/img/eye_closed.svg"
            alt="closed eye icon"
            title="preview"
+           id="project-transactional__image"
           />
           <img src="src/img/code.svg" alt="code icon" title="Source code" />
          </div>
@@ -385,11 +387,11 @@
 
    <!-- modals used as project screen -->
 
-   <section class="projectScreen__project">
+   <section class="projectScreen__project project-active">
     <div class="projectScreen__project_modal-close"></div>
     <span class="projectScreen__project-cross"> &#10799; </span>
 
-    <article class="projectScreen__project-project" id="promo-codeschool">
+    <article class="projectScreen__project-project" id="project-promo">
      <h1 class="projectScreen__project-project__header">Promo Mail</h1>
      <div class="projectScreen__project-project__wrapper">
       <img
@@ -399,6 +401,17 @@
       />
       <img src="./src/img/meal.png" alt="meal deal picture" id="img-meal" />
      </div>
+    </article>
+
+    <article class="projectScreen__project-project" id="project-transactional">
+     <h1 class="projectScreen__project-project__header">Transactional</h1>
+     <div class="projectScreen__project-project__wrapper">
+      <img
+       src="./src/img/transactional.png"
+       alt="codeschool picture"
+       id="img-transactional"
+      />
+    
     </article>
 
     <div class="navigation-container">
