--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@
            title="preview"
            id="project-transactional__image"
           />
-          <img src="src/img/code.svg" alt="code icon" title="Source code" />
+          <a href="http://" target="_blank" rel="noopener noreferrer">
+            <img src="src/img/code.svg" alt="code icon" title="Source code" />
+          </a>
          </div>
         </span>
        </div>
@@ -162,11 +164,7 @@
            src="src/img/eye_closed.svg"
            alt="closed eye icon"
            title="preview"
-          />
-          <img
-           src="src/img/PlayBtn.svg"
-           alt="closed eye icon"
-           title="Wanna see a vdo of this project?"
+           id="project-newsletter__img"
           />
           <img src="src/img/code.svg" alt="code icon" title="Source code" />
          </div>
@@ -404,14 +402,58 @@
     </article>
 
     <article class="projectScreen__project-project" id="project-transactional">
-     <h1 class="projectScreen__project-project__header">Transactional</h1>
-     <div class="projectScreen__project-project__wrapper">
+     <h1 class="projectScreen__project-project__header-transactional">Transactional</h1>
+      <p class="projectScreen__project-project__liveLink"><a href="//">
+        See it live here
+     </a></p>
+     <div class="projectScreen__project-project__wrapper-transactional">
       <img
-       src="./src/img/transactional.png"
+       src="./src/img/transactional_card.png"
        alt="codeschool picture"
        id="img-transactional"
       />
-    
+    </article>
+
+
+    <article class="projectScreen__project-project" id="project-newsletter">
+     <h1 class="projectScreen__project-project__header-newsletter">Newsletter</h1>
+     <p class="projectScreen__project-project__liveLink"><a href="//">
+        See it live and full version here
+     </a></p>
+     <div class="projectScreen__project-project__wrapper-newsletter">
+      <img
+       src="./src/img/newsletter.png"
+       alt="codeschool picture"
+       id="img-newsletter"
+      />
+    </article>
+
+    <article class="projectScreen__project-project" id="project-landingPage">
+     <h1 class="projectScreen__project-project__header">Landing Page</h1>
+     <div class="projectScreen__project-project__wrapper">
+      <img
+       src="./src/img/techwearLandingPage.png"
+       alt="techwear Landing Page"
+       id="img-techwearLandingPage"
+      />
+
+     <video width="400" height="300" controls>
+  <source src="./src/vdo/Techwear Landing Page.mp4" type="video/mp4">
+  <source src="./src/vdo/Techwear-Landing-Page.ogg" type="video/ogg">
+  Your browser does not support HTML video.
+</video>
+
+      <img src="./src/img/qpickLandingPage.png" alt="qpick ewallet landingPage" id="img-qpick" />
+
+ <video  width="400" height="300" controls>
+  <source src="./src/vdo/qpick landing page.mp4" type="video/mp4">
+  <source src="./src/vdo/qpick-landing-page.ogg" type="video/ogg">
+  Your browser does not support HTML video.
+</video>
+
+     </div>
+
+        
     </article>
 
     <div class="navigation-container">
