landingPage__slider_onProgress

--- a/index.html
+++ b/index.html
@@ -429,27 +429,38 @@
     </article>
 
     <article class="projectScreen__project-project" id="project-landingPage">
-     <h1 class="projectScreen__project-project__header">Landing Page</h1>
-     <div class="projectScreen__project-project__wrapper">
-      <img
+     <h1 class="projectScreen__project-project__header-landingPage">Landing Page</h1>
+      <p class="projectScreen__project-project__liveLink"><a href="//">
+        See it live online here
+     </a></p>
+     <div class="projectScreen__project-project__wrapper-landingPage ">
+       <div class="landingPage slide1">
+          <img
        src="./src/img/techwearLandingPage.png"
        alt="techwear Landing Page"
        id="img-techwearLandingPage"
       />
+       </div>
 
-     <video width="400" height="300" controls>
-  <source src="./src/vdo/Techwear Landing Page.mp4" type="video/mp4">
-  <source src="./src/vdo/Techwear-Landing-Page.ogg" type="video/ogg">
-  Your browser does not support HTML video.
-</video>
+      <div class="landingPage slide2">
+        <video width="400" height="auto" controls>
+            <source src="./src/vdo/Techwear Landing Page.mp4" type="video/mp4">
+            <source src="./src/vdo/Techwear-Landing-Page.ogg" type="video/ogg">
+            Your browser does not support HTML video.
+        </video>
+      </div>
 
-      <img src="./src/img/qpickLandingPage.png" alt="qpick ewallet landingPage" id="img-qpick" />
+      <div class="landingPage slide3">
+        <img src="./src/img/qpickLandingPage.png" alt="qpick ewallet landingPage" id="img-qpick" />
+      </div>
 
- <video  width="400" height="300" controls>
-  <source src="./src/vdo/qpick landing page.mp4" type="video/mp4">
-  <source src="./src/vdo/qpick-landing-page.ogg" type="video/ogg">
-  Your browser does not support HTML video.
-</video>
+      <div class="landingPage slide4">
+         <video  width="400" height="300" controls>
+          <source src="./src/vdo/qpick landing page.mp4" type="video/mp4">
+          <source src="./src/vdo/qpick-landing-page.ogg" type="video/ogg">
+          Your browser does not support HTML video.
+        </video>
+      </div>
 
      </div>
 
