--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
    rel="stylesheet"
    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
   />
-  <script defer src="./src/js/nameCard.js"></script>
+  <!-- <script defer src="./src/js/nameCard.js"></script> -->
+  <!-- <script defer src="./src/js/projects.js"></script> -->
   <script defer src="./src/js/slider.js"></script>
   <title>Nafiur Rahman Siddiqui Portfolio</title>
 
