--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
   />
   <!-- <script defer src="./src/js/nameCard.js"></script> -->
-  <!-- <script defer src="./src/js/projects.js"></script> -->
   <script defer src="./src/js/slider.js"></script>
+  <!-- <script defer src="./src/js/logoReset.js"></script> -->
   <title>Nafiur Rahman Siddiqui Portfolio</title>
 
  </head>
@@ -41,7 +41,7 @@
   <div class="container">
    <header class="header">
     <div class="header__logo-container">
-     <img src="src/img/logo_face.png" alt="logo" />
+     <img src="src/img/logo_face.png" alt="logo" id="logo" />
     </div>
     <button class="header__contact">Say Hello</button>
    </header>
@@ -53,6 +53,14 @@
      <button class="project-btn" id="newsletter">Newsletter</button>
      <button class="project-btn" id="landingPage">Landing Page</button>
     </aside>
+
+    <div class="main-content_indicator container">
+       <p class="main-content_indicator-text">
+          Click to activate the profile board :)
+       </p>
+
+       <img src="./src/img/hand_indicator.svg" alt="hand handindicator" id="handIndicator">
+    </div>
 
     <article class="main-content__card-container">
      <div class="ghost-div__container">
