--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:title" content="Portfolio" />
   <meta
    property="og:description"
-   content="A portfolio that contains Nafi's works regarding HTML email Templates and Landing Page."
+   content="A portfolio that contains Nafi's works of HTML email Templates and Landing Page."
   />
   <meta
    property="og:image"
@@ -54,7 +54,7 @@
      <button class="project-btn" id="landingPage">Landing Page</button>
     </aside>
 
-    <div class="main-content_indicator container">
+    <div class="main-content_indicator-container">
        <p class="main-content_indicator-text">
           Click to activate the profile board :)
        </p>
