--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <title>Nafiur Rahman Siddiqui Portfolio</title>
 
  </head>
+
  <body class="body">
   <div class="container">
    <header class="header">
@@ -119,7 +120,7 @@
             class="project-promo__image"
             id="project-promo__img-codeschool"
            />
-           <a href="http://" target="_blank" rel="noopener noreferrer">
+           <a href="https://github.com/TheHunter808/codify/blob/master/index.html" target="_blank" rel="noopener noreferrer">
             <img src="src/img/code.svg" alt="code icon" title="Source code" />
            </a>
           </div>
@@ -137,7 +138,7 @@
             class="project-promo__image"
             id="project-promo__img-meal"
            />
-           <a href="http://" target="_blank" rel="noopener noreferrer">
+           <a href="https://github.com/TheHunter808/Freshly/blob/master/index.html" target="_blank" rel="noopener noreferrer">
             <img src="src/img/code.svg" alt="code icon" title="Source code" />
            </a>
           </div>
@@ -160,7 +161,7 @@
            title="preview"
            id="project-transactional__image"
           />
-          <a href="http://" target="_blank" rel="noopener noreferrer">
+          <a href="https://github.com/TheHunter808/Flight-Receipt/blob/master/index.html" target="_blank" rel="noopener noreferrer">
             <img src="src/img/code.svg" alt="code icon" title="Source code" />
           </a>
          </div>
@@ -181,7 +182,10 @@
            title="preview"
            id="project-newsletter__img"
           />
-          <img src="src/img/code.svg" alt="code icon" title="Source code" />
+          <a href="https://github.com/TheHunter808/Newsletter/blob/master/index.html" target="_blank" rel="noopener noreferrer">
+
+             <img src="src/img/code.svg" alt="code icon" title="Source code" />
+          </a>
          </div>
         </span>
        </div>
@@ -207,8 +211,10 @@
             title="Wanna see a vdo of this project?"
             id="project-qpick__vdo"
            />
-           <img src="src/img/code.svg" alt="code icon" title="Source code"
-           id="project-qpick__code" />
+           <a href="https://github.com/TheHunter808/Q-pick---Landing-Page/tree/master" target="_blank" rel="noopener noreferrer">
+              <img src="src/img/code.svg" alt="code icon" title="Source code"
+              id="project-qpick__code" />
+           </a>
           </div>
          </span>
         </div>
@@ -229,8 +235,12 @@
             title="Wanna see a vdo of this project?"
             id="project-techwear__vdo"
            />
-           <img src="src/img/code.svg" alt="code icon" title="Source code"
-           id="project-techwear__code" />
+
+           <a href="https://github.com/TheHunter808/Techwear-landing-page/tree/master" target="_blank" rel="noopener noreferrer">
+
+              <img src="src/img/code.svg" alt="code icon" title="Source code"
+              id="project-techwear__code" />
+           </a>
           </div>
          </span>
         </div>
@@ -266,7 +276,7 @@
          <img src="src/img/facebook.svg" alt="facebook icon" />
         </a>
 
-        <a href="http://" target="_blank" rel="noopener noreferrer">
+        <a href="https://twitter.com/CodeOnLoop" target="_blank" rel="noopener noreferrer">
          <img src="src/img/twitter.svg" alt="twitter icon" />
         </a>
 
@@ -353,7 +363,7 @@
        <img src="src/img/facebook.svg" alt="facebook icon" />
       </a>
 
-      <a href="http://" target="_blank" rel="noopener noreferrer">
+      <a href="https://twitter.com/CodeOnLoop" target="_blank" rel="noopener noreferrer">
        <img src="src/img/twitter.svg" alt="twitter icon" />
       </a>
 
@@ -385,7 +395,7 @@
      <img src="src/img/facebook.svg" alt="facebook icon" />
     </a>
 
-    <a href="http://" target="_blank" rel="noopener noreferrer">
+    <a href="https://twitter.com/CodeOnLoop" target="_blank" rel="noopener noreferrer">
      <img src="src/img/twitter.svg" alt="twitter icon" />
     </a>
 
@@ -414,19 +424,31 @@
 
     <article class="projectScreen__project-project" id="project-promo">
      <h1 class="projectScreen__project-project__header">Promo Mail</h1>
+     
      <div class="projectScreen__project-project__wrapper">
-      <img
-       src="./src/img/codeschool.png"
-       alt="codeschool picture"
-       id="img-codeschool"
-      />
-      <img src="./src/img/meal.png" alt="meal deal picture" id="img-meal" />
+        <div class="promo-img">
+          <p class="projectScreen__project-project__liveLink"><a href="https://codifypromo.netlify.app/">
+        See it live here
+     </a></p>
+           <img
+            src="./src/img/codeschool.png"
+            alt="codeschool picture"
+            id="img-codeschool"
+           />
+        </div>
+
+        <div class="promo-img">
+ <p class="projectScreen__project-project__liveLink"><a href="https://freshlypromo.netlify.app/">
+        See it live and full version here
+     </a></p>
+           <img src="./src/img/meal.png" alt="meal deal picture" id="img-meal" />
+        </div>
      </div>
     </article>
 
     <article class="projectScreen__project-project" id="project-transactional">
      <h1 class="projectScreen__project-project__header-transactional">Transactional</h1>
-      <p class="projectScreen__project-project__liveLink"><a href="//">
+      <p class="projectScreen__project-project__liveLink"><a href="https://flightreciept.netlify.app/">
         See it live here
      </a></p>
      <div class="projectScreen__project-project__wrapper-transactional">
@@ -440,7 +462,7 @@
 
     <article class="projectScreen__project-project" id="project-newsletter">
      <h1 class="projectScreen__project-project__header-newsletter">Newsletter</h1>
-     <p class="projectScreen__project-project__liveLink"><a href="//">
+     <p class="projectScreen__project-project__liveLink"><a href="https://fordnewsletter.netlify.app/">
         See it live and full version here
      </a></p>
      <div class="projectScreen__project-project__wrapper-newsletter">
@@ -456,7 +478,7 @@
      
      <div class="projectScreen__project-project__wrapper-landingPage ">
        <div class="landingPage slide1">
-          <p class="projectScreen__project-project__liveLink"><a href="//">
+          <p class="projectScreen__project-project__liveLink"><a href="https://techwearconcept.netlify.app">
         See it live online here
      </a></p>
           <img
@@ -467,7 +489,7 @@
        </div>
 
       <div class="landingPage slide2">
-         <p class="projectScreen__project-project__liveLink"><a href="//">
+         <p class="projectScreen__project-project__liveLink"><a href="https://techwearconcept.netlify.app">
         See it live online here
      </a></p>
         <video width="400" height="auto" controls>
@@ -478,14 +500,14 @@
       </div>
 
       <div class="landingPage slide3">
-         <p class="projectScreen__project-project__liveLink"><a href="//">
+         <p class="projectScreen__project-project__liveLink"><a href="https://qpicklandingpage.netlify.app">
         See it live online here
      </a></p>
         <img src="./src/img/qpickLandingPage.png" alt="qpick ewallet landingPage" id="img-qpick" />
       </div>
 
       <div class="landingPage slide4">
-         <p class="projectScreen__project-project__liveLink"><a href="//">
+         <p class="projectScreen__project-project__liveLink"><a href="https://qpicklandingpage.netlify.app">
         See it live online here
      </a></p>
          <video  width="400" height="300" controls>
