--- a/index.html
+++ b/index.html
@@ -269,6 +269,17 @@
        </p>
 
        <aside class="social-media-contact">
+
+           <a
+     href="https://www.linkedin.com/in/nafiur-rahman-siddiqui-405b25210/"
+     target="_blank"
+     rel="noopener noreferrer"
+     class="social-media_link"
+    >
+     <img src="src/img/linkedIn.svg" alt="linked in icon" />
+    </a>
+
+
         <a
          href="https://www.facebook.com/jim.rahman.3726/"
          target="_blank"
@@ -360,6 +371,15 @@
      </article>
 
      <aside class="social-media-tray">
+
+         <a
+     href="https://www.linkedin.com/in/nafiur-rahman-siddiqui-405b25210/"
+     target="_blank"
+     rel="noopener noreferrer"
+     class="social-media_link"
+    >
+     <img src="src/img/linkedIn.svg" alt="linked in icon" />
+    </a>
       <a
        href="https://www.facebook.com/jim.rahman.3726/"
        target="_blank"
@@ -394,7 +414,17 @@
    </section>
 
    <aside class="social-media">
-    <a
+    
+      <a
+     href="https://www.linkedin.com/in/nafiur-rahman-siddiqui-405b25210/"
+     target="_blank"
+     rel="noopener noreferrer"
+     class="social-media_link"
+    >
+     <img src="src/img/linkedIn.svg" alt="linked in icon" />
+    </a>
+
+      <a
      href="https://www.facebook.com/jim.rahman.3726/"
      target="_blank"
      rel="noopener noreferrer"
