--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
    content="https://i.ibb.co/K6L3KvL/Main-frame-Home-2.png"
   />
   <meta property="og:url" content="#" />
-  <meta name="twitter:card" content="Portfolio" />
-  <meta name="twitter:site" content="@CodeOnLoop" />
+  <meta name="twitter:card" content="Portfolio of Nafi" />
+  <meta name="twitter:image:alt" content="Portfolio Banner">
+  <meta name="twitter:title" content="Portfolio Of Nafuir Rahman">
+  <meta name="twitter:description" content="This is a portfolio that contains Nafi's works of HTML email Templates and Landing Page.">
+  <meta name="twitter:image" content="https://i.ibb.co/K6L3KvL/Main-frame-Home-2.png ">
   <meta name="twitter:creator" content="@CodeOnLoop" />
   <link rel="shortcut icon" href="src/img/logo_face.png" type="image/x-icon" />
   <link rel="stylesheet" href="src/sass/main.scss" />
