--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta
    name="description"
-   content="Nafiur Rahman Siddiqui's Portfolio.Contains his works and regarded as stage 1 Portfolio"
+   content="Nafiur Rahman Siddiqui's Portfolio.Contains his works and regarded as stage 1 Portfolio primarily focused on HTML email development even though he builds web app and website with front end technologies."
   />
   <meta
    name="keywords"
-   content="Nafiur Rahman Siddiqui,HTML email Developer,Portfolio"
+   content="Nafiur Rahman Siddiqui,HTML email Developer,Portfolio,Nafi,HTML developer,email campaign,hire,job,carrier,programming,sampe works,web developer"
   />
+
+  <!-- open graph data -->
   <meta property="og:title" content="Portfolio" />
   <meta
    property="og:description"
@@ -21,12 +23,16 @@
    property="og:image"
    content="https://i.ibb.co/K6L3KvL/Main-frame-Home-2.png"
   />
-  <meta property="og:url" content="#" />
-  <meta name="twitter:card" content="Portfolio of Nafi" />
+  <meta property="og:url" content="https://nafi-v1.netlify.app" />
+  <meta property="og:type" content="website" />
+
+  <!-- twitter card -->
+  <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:image:alt" content="Portfolio Banner">
   <meta name="twitter:title" content="Portfolio Of Nafuir Rahman">
   <meta name="twitter:description" content="This is a portfolio that contains Nafi's works of HTML email Templates and Landing Page.">
   <meta name="twitter:image" content="https://i.ibb.co/K6L3KvL/Main-frame-Home-2.png ">
+  <meta name="twitter:url" content="https://nafi-v1.netlify.app" />
   <meta name="twitter:creator" content="@CodeOnLoop" />
   <link rel="shortcut icon" href="src/img/logo_face.png" type="image/x-icon" />
   <link rel="stylesheet" href="src/sass/main.scss" />
